import outdent from 'outdent';
import {typescriptEslintParser} from '../scripts/parsers.js';
import {getTester, parsers} from './utils/test.js';

const {test} = getTester(import.meta);

const typeAware = code => ({
	code,
	filename: 'file.ts',
	languageOptions: {
		parser: typescriptEslintParser,
		parserOptions: {projectService: {allowDefaultProject: ['*.ts']}},
	},
});

test.snapshot({
	valid: [
		'new Uint8Array(data)',
		'new Uint8Array(data.buffer, data.byteOffset, data.byteLength)',
		'new Uint8Array(data.buffer, offset, length)',
		'new Uint8Array(data.buffer, data.byteOffset, length)',
		'new Uint8Array(data.buffer, offset, data.byteLength)',
		'new Uint8Array(data.buffer, other.byteLength, data.byteLength)',
		'new Uint8Array(data.buffer, data.byteOffset, other.buffer.byteLength)',
		'new Int8Array(data.buffer, data.byteOffset, data.byteLength)',
		'new Uint8ClampedArray(data.buffer, data.byteOffset, data.byteLength)',
		'new Uint32Array(data.buffer, data.byteOffset, data.byteLength / Uint32Array.BYTES_PER_ELEMENT)',
		'new Uint32Array(data.buffer, data.byteOffset, data.byteLength / Float32Array.BYTES_PER_ELEMENT)',
		'new Float64Array(data.buffer, data.byteOffset, data.byteLength / Float64Array.BYTES_PER_ELEMENT)',
		'new BigUint64Array(data.buffer, data.byteOffset, data.byteLength / BigUint64Array.BYTES_PER_ELEMENT)',
		'new BigInt64Array(data.buffer, data.byteOffset, data.byteLength / BigUint64Array.BYTES_PER_ELEMENT)',
		'new DataView(data.buffer)',
		'const Uint8Array = function () {}; new Uint8Array(data.buffer)',
		'new Uint32Array(data.buffer, data.byteOffset, data.byteLength / SOME_CONSTANT)',

		'Buffer.from(data)',
		'Buffer.from(data.buffer, data.byteOffset, data.byteLength)',
		'Buffer.from(data.buffer, offset, length)',
		'Buffer.from(data.buffer, data.byteOffset, length)',
		'Buffer.from(data.buffer, offset, data.byteLength)',
		'Buffer.from(data.buffer, other.byteLength, data.byteLength)',
		'Buffer.from(data.buffer, data.byteOffset, other.buffer.byteLength)',
		'Buffer.from(data.buffer, data.byteOffset, data.length)',
		'Buffer.from(data.buffer, data.byteOffset, data.byteLength / Uint8Array.BYTES_PER_ELEMENT)',
		'globalThis.Buffer.from(data.buffer, data.byteOffset, data.byteLength)',
		'import {Buffer} from \'node:buffer\'; Buffer.from(data.buffer, data.byteOffset, data.byteLength)',
		'import {Buffer as B} from \'buffer\'; B.from(data.buffer, data.byteOffset, data.byteLength)',
		'const Buffer = {from() {}}; Buffer.from(data.buffer)',
		'import {Buffer} from \'not-buffer\'; Buffer.from(data.buffer)',
		'import Buffer from \'node:buffer\'; Buffer.from(data.buffer)',

		'data.buffer.slice(data.byteOffset, data.byteOffset + data.byteLength)',
		'data.buffer.slice(data.byteOffset, end)',
		'data.buffer.slice(offset, data.byteOffset + data.byteLength)',
		'data.buffer.slice(offset, data.byteLength)',
		'data.buffer.slice(other.byteLength, data.byteOffset + data.byteLength)',
		'data.buffer.slice(data.byteOffset, other.buffer.byteLength)',
		'data.buffer.notSlice()',

		{code: 'new Uint8Array((data as Buffer).buffer, (data as Buffer).byteOffset, (data as Buffer).byteLength)', languageOptions: {parser: parsers.typescript}},
		typeAware('function foo(packet: {buffer: ArrayBuffer}) { new Uint8Array(packet.buffer); }'),
		typeAware('function foo(packet: {buffer: ArrayBuffer}) { Buffer.from(packet.buffer); }'),
		typeAware('class Packet { buffer = new ArrayBuffer(0); } function foo(packet: Packet) { packet.buffer.slice(); }'),
		typeAware('function foo(packet: {buffer: ArrayBuffer} | {buffer: SharedArrayBuffer}) { Buffer.from(packet.buffer); }'),
		typeAware('function foo(data: Uint8Array | {buffer: ArrayBuffer}) { Buffer.from(data.buffer); }'),
		typeAware('function foo(data: {buffer: string; byteOffset: number; byteLength: number}) { Buffer.from(data.buffer); }'),
		typeAware('interface Buffer {} function foo(data: Buffer & {buffer: ArrayBuffer}) { Buffer.from(data.buffer); }'),

		// A TypeScript `import =` declaration binds the module object, not `Buffer`, and must not crash
		{code: 'import Buffer = require(\'node:buffer\'); Buffer.from(data.buffer)', languageOptions: {parser: parsers.typescript}},
		{code: 'import Buffer = require(\'other\'); Buffer.from(data.buffer)', languageOptions: {parser: parsers.typescript}},
		{code: 'import B = Buffer; B.from(data.buffer)', languageOptions: {parser: parsers.typescript}},
		'getBuffer().from(data.buffer)',
		'NotBuffer.from(data.buffer)',
		typeAware('interface Buffer {buffer: ArrayBuffer; byteOffset: number | undefined; byteLength: number} function foo(data: Buffer) { Buffer.from(data.buffer); }'),
		typeAware('function foo(data: null | undefined) { Buffer.from(data.buffer); }'),
		typeAware('function foo(data: null) { Buffer.from(data.buffer); }'),
		typeAware('function foo(data: number) { Buffer.from(data.buffer); }'),
	],
	invalid: [
		'new Uint8Array(data.buffer)',
		'new Uint8Array(data.buffer, data.byteOffset)',
		'new Uint8Array(data.buffer, 0)',
		'new Uint8Array(data.buffer, 0, data.byteLength)',
		'new Uint8Array(data.buffer, undefined, data.byteLength)',
		'new Uint8Array(data.buffer, data.byteOffset, undefined)',
		'new Uint8Array(data.buffer, data.byteLength, data.byteLength)',
		'new Uint8Array(data.buffer, data.length, data.byteLength)',
		'new Uint8Array(data.buffer, data.byteOffset, data.buffer.byteLength)',
		'new Int8Array(data.buffer)',
		'new Uint8ClampedArray(data.buffer, data.byteOffset)',
		'new Uint32Array(data.buffer)',
		'new Uint32Array(data.buffer, data.byteOffset)',
		'new Uint32Array(data.buffer, data.byteOffset, data.byteLength)',
		'new Uint32Array(data.buffer, offset, data.byteLength)',
		'new Uint32Array(data.buffer, data.byteOffset, data.byteLength / Uint16Array.BYTES_PER_ELEMENT)',
		'new Float64Array(data.buffer, data.byteOffset, data.byteLength)',
		'new (Uint8Array)(data.buffer)',
		'new Uint8Array(data?.buffer)',
		'new Uint8Array((data).buffer)',
		'new Uint8Array((data?.view).buffer)',
		{code: 'new Uint8Array((data as Buffer).buffer)', languageOptions: {parser: parsers.typescript}},

		'Buffer.from(data.buffer)',
		'Buffer.from(data?.buffer)',
		'Buffer?.from(data.buffer)',
		'Buffer.from?.(data.buffer)',
		'Buffer.from((data?.view).buffer)',
		'Buffer.from(data.buffer, data.byteOffset)',
		'Buffer.from(data.buffer, 0)',
		'Buffer.from(data.buffer, 0, data.byteLength)',
		'Buffer.from(data.buffer, data.byteOffset, undefined)',
		'Buffer.from(data.buffer, data.byteLength, data.byteLength)',
		'Buffer.from(data.buffer, data.length, data.byteLength)',
		'Buffer.from(data.buffer, data.byteOffset, data.buffer.byteLength)',
		'Buffer.from(data.buffer, data.byteOffset, data.byteLength / Uint32Array.BYTES_PER_ELEMENT)',
		'globalThis.Buffer.from(data.buffer)',
		// Other global object names are also recognized
		'window.Buffer.from(data.buffer)',
		'global.Buffer.from(data.buffer)',
		'self.Buffer.from(data.buffer)',
		'import {Buffer} from \'node:buffer\'; Buffer.from(data.buffer)',
		'import {Buffer as B} from \'buffer\'; B.from(data.buffer, data.byteOffset)',
		'import * as buffer from \'node:buffer\'; buffer.Buffer.from(data.buffer)',
		'import buffer from \'buffer\'; buffer.Buffer.from(data.buffer)',
		'Buffer.from((data).buffer)',

		'data.buffer.slice()',
		'data?.buffer.slice()',
		'(data?.view).buffer.slice()',
		'data.buffer?.slice()',
		'data.buffer.slice?.()',
		'data.buffer.slice(data.byteOffset)',
		'data.buffer.slice(offset)',
		'data.buffer.slice(data.byteOffset, data.byteLength)',
		'data.buffer.slice(0, data.byteOffset + data.byteLength)',
		'data.buffer.slice(data.byteOffset, undefined)',
		'data.buffer.slice(data.byteLength, data.byteOffset + data.byteLength)',
		'data.buffer.slice(data.length, data.byteOffset + data.byteLength)',
		'data.buffer.slice(data.byteOffset, data.buffer.byteLength)',
		'(data).buffer.slice()',

		outdent`
			new Uint8Array(
				data.buffer,
				data.byteOffset,
			)
		`,
		outdent`
			Buffer.from(
				data.buffer,
				data.byteOffset,
			)
		`,
		// Suggestion withheld because of the comment.
		'new Uint8Array(data.buffer, /* keep me */ data.byteOffset)',
		'Buffer.from(data.buffer, /* keep me */ data.byteOffset)',
		'data.buffer.slice(/* keep me */)',
		// Suggestion withheld because it would duplicate the side effect.
		'new Uint8Array(getData().buffer)',
		'Buffer.from(getData().buffer)',
		'getData().buffer.slice()',
		'new Uint8Array(source.view.buffer)',
		'Buffer.from(source.view.buffer)',
		'source.view.buffer.slice()',
		typeAware('function foo(data: Uint8Array) { new Uint8Array(data.buffer); }'),
		typeAware('function foo(data: DataView) { new Uint8Array(data.buffer); }'),
		typeAware('function foo(data: DataView) { Buffer.from(data.buffer); }'),
		typeAware('function foo(data: ArrayBufferView) { data.buffer.slice(); }'),
		typeAware('function foo<T extends Uint8Array>(data: T) { data.buffer.slice(); }'),
		typeAware('class Bytes extends Uint8Array {} function foo(data: Bytes) { Buffer.from(data.buffer); }'),
		typeAware('interface Buffer {buffer: ArrayBuffer; byteOffset: number; byteLength: number} function foo(data: Buffer) { Buffer.from(data.buffer); }'),
		typeAware('interface Buffer {} function foo(data: Buffer) { Buffer.from(data.buffer); }'),
		typeAware('interface Buffer {buffer: ArrayBuffer | SharedArrayBuffer; byteOffset: number; byteLength: number} function foo(data: Buffer) { Buffer.from(data.buffer); }'),
		typeAware(outdent`
			interface Buffer<Data extends ArrayBuffer, Offset extends number> {buffer: Data; byteOffset: Offset; byteLength: number}
			function foo<Data extends ArrayBuffer, Offset extends number>(data: Buffer<Data, Offset>) { Buffer.from(data.buffer); }
		`),
		typeAware('type Buffer = {buffer: ArrayBuffer; byteOffset: number; byteLength: number}; function foo(data: Buffer) { Buffer.from(data.buffer); }'),
		typeAware('function foo(data: any) { Buffer.from(data.buffer); }'),
	],
});
